<resources>
    <string name="app_name">Children</string>
    <string name="ACCOUNT">ACCOUNT</string>
    <string name="NEXT">NEXT</string>
    <string name="title_activity_log_in_act">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>

    <string name="tap_to_exit">"TAP"</string>
    <string name="tip1">"Поздравляем! Теперь у Вас есть любимые имена! Вы можете удалить любое имя, если оно больше Вам не нравится."</string>

    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="father_name">"Имя отца:"</string>
    <string name="name">"Имя"</string>
    <string name="zodiak_sign">"Знак зодиака:"</string>
    <string name="sex">"Пол ребенка:"</string>
    <string name="qualities">"Предпочтительные качества:"</string>
    <string name="title_activity_choosing">Choosing</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="sign_out_button">Sign out</string>
    <string name="revoke_access_button">Revoke access</string>
    <string name="status">Status</string>
    <string name="todo">TODO</string>
    <string name="empty" />
    <string name="title_activity_nav">NavAct</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="choose_reset">Back</string>
    <string name="my_list">Мои имена</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="to_test">Go to test</string>
    <string name="girl_button">Выбор женского имени</string>
    <string name="boy_button">Выбор мужского имени</string>
    <string name="go_to_tests">Пройти тест</string>
    <string name="end">Закончить</string>
    <string name="get_back">В главное меню</string>
    <string name="last_name">Поздравляем! \nЛучшее имя:\n\n</string>


    <string-array name="screen_array">
        <item>Screen 1</item>
        <item>Screen 2</item>
        <item>Screen 3</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="container">container</string>
    <string name="hello">Hello</string>
</resources>
