<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Choose">

    <Button
        android:id="@+id/button4"
        android:layout_width="179dp"
        android:layout_height="68dp"
        android:layout_marginBottom="75dp"
        android:onClick="onClick2"
        android:text="@string/NEXT"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:layout_width="409dp"
        android:layout_height="409dp"
        android:layout_marginTop="130dp"
        android:background="#F1FBFC"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="left"
            android:contentDescription="@string/todo"
            android:onClick="onDenyClick"
            app:srcCompat="@drawable/ic_dialog_close_light"
            tools:ignore="RtlHardcoded" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="right"
            android:contentDescription="@string/todo"
            android:onClick="onAddClick"
            app:srcCompat="@android:drawable/ic_input_add"
            tools:ignore="RtlHardcoded" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/todo"
            app:srcCompat="@android:drawable/star_big_on" />

        <TextView
            android:id="@+id/NameOutput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="38sp"
            android:text="@string/empty" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>